2007-12-15  Lutz Mueller <lutz@users.sourceforge.net>

	* po/*.po: Updated po-files.
	* libexif/exif-data.c: (exif_data_load_data_thumbnail) guard against 
	negative size (in addition to negative offset), too.

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	Bug pointed out by Meder Kydyraliev, Google Security Team:

	* libexif/exif-data.c: (exif_data_load_data_thumbnail) Ignore bugus
	data.

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	* README: Point users to some tools needed to build libexif.
	* configure.ac: It looks like po/Makefile.in is already registered
	with AC_CONFIG_FILES (whatever this means).

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	Bug pointed out by Meder Kydyraliev, Google Security Team:

	* libexif/exif-loader.c: (exif_loader_write) Ignore buffers of
	zero length.

2007-12-07  Jan Patera <patera@users.sourceforge.net>

	* Added support for Fuji makernotes

2007-11-13  Dan Fandrich <dan@coneharvesters.com>
	* Added support for a new macro NO_VERBOSE_TAG_DATA to allow
	  some size reduction but still retain the ability to properly
	  interpret each tag.
	* Added an end-of-table marker in the Canon color_information
	  makernote table that could otherwise potentially cause a crash 
	  on a bad image.

2007-11-12  Dan Fandrich <dan@coneharvesters.com>
	* Added support for more Olympus makernotes, based on data on
	  Phil Harvey's ExifTool page at
	  http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/
	  and sanity checked by the pel-images in the libexif test suite.
	* Added support for Sanyo makernotes, which have the identical
	  tag format and (so it seems) namespace of the Olympus tags.

2007-11-08  Dan Fandrich <dan@coneharvesters.com>
	* Added Canadian English translation, eh?

2007-11-06  Dan Fandrich <dan@coneharvesters.com>
	* Renamed EXIF_TAG_UNKNOWN_C4A5 to EXIF_TAG_PRINT_IMAGE_MATCHING
	  The PIM entry seems to have a format consisting of an 8 byte