@@ -5,5 +5,6 @@ Makefile.in
 libexif.la
 *.o
 *.lo
+*.la
 libexif.pc
 _stdint.h
